# FacelinkStudio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
assets/shaders/: DetectionBoxFragment.glsl  FlatColorFragment.glsl  FlatColorVertex.glsl  TextureFragment.glsl  TextureVertex.glsl
cmake/: Conan.cmake  LinkLibraries.cmake  Settings.cmake
src/: CMakeLists.txt  FacelinkStudio.cpp  FacelinkStudio.hpp  FacelinkStudioServices.hpp
src/Detectors/: CMakeLists.txt  FaceAligner.cpp  FaceAligner.hpp  FaceAlignmentResult.hpp  FaceClassificationResult.hpp  FaceClassifier.cpp  FaceClassifier.hpp  FaceDetectionResult.hpp  FaceDetector.cpp  FaceDetector.hpp  FaceEmbedder.cpp  FaceEmbedder.hpp
src/Editor/: CMakeLists.txt  DatabaseWindow.cpp  DatabaseWindow.hpp  DockSpace.cpp  DockSpace.hpp  Editor.cpp  Editor.hpp  FacesWindow.cpp  FacesWindow.hpp  InspectorWindow.cpp  InspectorWindow.hpp  PreviewCameraController.cpp  PreviewCameraController.hpp  PreviewWindow.cpp  PreviewWindow.hpp  ResourceWindow.cpp  ResourceWindow.hpp
src/Events/: CMakeLists.txt  FaceDetectionSettingChangedEvent.hpp  FaceRecognitionSettingChangedEvent.hpp  FaceSelectedEvent.hpp  GeneralSettingsChangedEvent.hpp  OpenDatabaseEvent.hpp  OpenFileEvent.hpp  PreviewCameraResetEvent.hpp  ResourceSelectedEvent.hpp  RetrainFaceClassifierEvent.hpp
src/Persistence/: CMakeLists.txt  Database.cpp  Database.hpp  DatabaseTransaction.cpp  DatabaseTransaction.hpp  FlsDatabase.cpp  FlsDatabase.hpp  SqlStatement.cpp  SqlStatement.hpp
src/Persistence/Repository/: CMakeLists.txt  EntityModel.hpp  FaceModel.cpp  FaceModel.hpp  FaceRepository.cpp  FaceRepository.hpp  PersonModel.hpp  PersonRepository.cpp  PersonRepository.hpp
src/Resource/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.hpp  ResourcePreprocessor.cpp  ResourcePreprocessor.hpp  UserResource.hpp
src/Utils/: CMakeLists.txt  DataUtils.cpp  DataUtils.hpp  Math.cpp  Math.hpp  Random.cpp  Random.hpp
